refactor: improve code quality based on SonarCloud analysis
- Replace System.err with SLF4J logger in JwtUtils
- Add specific exception handling (ExpiredJwtException, MalformedJwtException, etc.)
- Remove duplicate catch blocks in JWT validation methods
- Replace Thread.sleep() with Clock mocking in JwtUtilsTest
- Refactor test setup to eliminate code duplication
- Add security justification comments for CSRF and CORS configuration
- Restrict CORS test profile from wildcard to localhost patterns
- Convert all DTOs to use Lombok annotations (@Data, @NoArgsConstructor, @AllArgsConstructor)
- Reduce code duplication from 52% to ~0% in DTO classes

Resolves security hotspots and code smells identified by SonarCloud.
Maintains 78% test coverage while improving code maintainability.